# nwpu-grade

./: .gitignore  Dockerfile  NWPUgrade.py  README.md  basic.py  bot.py  client.py  config.py.example  data.py  input.py  launch_bot.py  pyproject.toml  requirements.txt
bot/: __init__.py  account.py  basic.py  monitor.py  query.py  start.py  util.py
bot_impl/: __init__.py  monitor.py  query.py
db/: __init__.py
scrapers/: __init__.py  base.py  buaa.py  nwpu.py
